name:                audio-reactive-gfx
version:             0.1.0.0
synopsis:            Draw a waveform in 3d using JACK and GPipe (OpenGL)
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6, GLUT >=2.5, Vec >=1.0, GPipe >=1.4
  exposed-modules:     Lib.AnimUtils, Lib.Instance, Lib.RenderState, Lib.TypeNames
  default-language:    Haskell2010

executable waveform
  main-is:             Waveform.hs
  build-depends:       base >=4.6, GLUT >=2.5, Vec >=1.0, GPipe >=1.4, jack >=0.7, audio-reactive-gfx
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
